<resources>
    <string name="app_name">Pomodoro</string>
    <string name="app_version">v1.0.0</string>
    <string name="notification_channel_name">Pomodoro Notifications</string>
    <string name="notification_channel_description">Pomodoro notifications</string>
    <string name="notification_update_channel_name">Pomodoro Update Notifications</string>
    <string name="notification_update_channel_description">Pomodoro update notifications</string>
    <string name="notification_title_start">Start</string>
    <string name="notification_title_pause">Pause</string>
    <string name="notification_title_resume">Resume</string>
    <string name="notification_title_ready">Ready</string>
    <string name="notification_title_working">Working</string>
    <string name="notification_title_paused">Paused</string>
    <string name="notification_title_resting">Resting</string>
    <string name="email_title_send_feedback">Send Feedback</string>
    <string name="email_title_open_email">Open Email</string>
    <string name="email_address_mailto">mailto: glib.sitiugin@gmail.com</string>
    <string name="email_subject_feedback">Feedback for Pomodoro</string>
    <string name="email_no_clients_found">No email clients installed!</string>
    <string name="core_cancel">Cancel</string>
    <string name="core_save">Save</string>
    <string name="core_add">Add</string>
    <string name="core_complete">Complete</string>
    <string name="core_open">Open</string>
    <string name="core_close">Close</string>
    <string name="core_set">Set</string>
    <string name="core_signed_out">Signed out</string>
    <string name="core_sign_out_failed">Sign out failed</string>
    <string name="core_count" formatted="true">%1$s+</string>
    <string name="core_pomodoro" formatted="true">%1$s Pomodoro</string>
    <string name="core_pomodoros" formatted="true">%1$s Pomodoros</string>
    <string name="core_pomodoro_time" formatted="true">%1$s Pomodoro - %2$s hours</string>
    <string name="core_pomodoros_time" formatted="true">%1$s Pomodoros - %2$s hours</string>
    <string name="core_hours" formatted="true">%1$s h</string>
    <string name="core_edit_something" formatted="true">Edit %1$s</string>
    <string name="core_filter">Filter</string>
    <string name="core_undo">Undo</string>
    <string name="core_time" formatted="true">%1$s:%2$s</string>
    <string name="core_text_no_data">Nothing to show</string>
    <string name="core_text_no_data_projects">No projects to show</string>
    <string name="core_text_no_data_tasks">No tasks to show</string>
    <string name="core_text_no_data_history">No events to show</string>
    <string name="core_active">Active</string>
    <string name="core_completed">Completed</string>
    <string name="core_archived">Archived</string>
    <string name="core_due" formatted="true">Due: %1$s</string>
    <string name="core_completed_on" formatted="true">Completed: %1$s</string>
    <string name="core_ratio" formatted="true">%1$s/%2$s</string>
    <string name="core_empty">-</string>
    <string-array name="core_layout">
        <item>List</item>
        <item>Board</item>
        <item>Calendar</item>
    </string-array>
    <string-array name="core_recurrence">
        <item>Never repeat</item>
        <item>Every day</item>
        <item>Every two days</item>
        <item>Every three days</item>
        <item>Every four days</item>
        <item>Every five days</item>
        <item>Every six days</item>
        <item>Every week</item>
        <item>On weekdays</item>
        <item>On weekends</item>
        <item>Every month</item>
    </string-array>
    <string name="font_sans_serif_normal">sans-serif-normal</string>
    <string name="font_sans_serif_light">sans-serif-light</string>
    <string name="font_sans_serif_thin">sans-serif-thin</string>
    <string name="font_sans_serif_medium">sans-serif-medium</string>
    <string name="splash_title_send_confirmation">Send Confirmation</string>
    <string name="splash_title_open_email_client">Open Email Client</string>
    <string name="splash_title_send_again">Send Again</string>
    <string name="splash_title_try_other_email">Try a Different Email</string>
    <string name="splash_title_email_verification">Email Verification</string>
    <string name="splash_title_terms">Terms of Service</string>
    <string name="splash_title_privacy">Privacy Policy</string>
    <string name="splash_text_terms">By signing in you are agreeing to our Terms and Conditions and Privacy Policy</string>
    <string name="splash_text_confirmation_email_sent_success" formatted="true">Your verification email was sent to %1$s</string>
    <string name="splash_text_confirmation_email_sent_fail" formatted="true">We could not send the verification email to %1$s. Please try another email</string>
    <string name="splash_hint_enter_email">Enter your email address</string>
    <string name="splash_toast_signing_in">Signing in…</string>
    <string name="splash_toast_sign_in_success">Signed in</string>
    <string name="splash_toast_sign_in_failed">Sign in failed</string>
    <string name="splash_toast_signed_in_as" formatted="true">Signed in as %1$s</string>
    <string name="splash_toast_confirmation_email_sent_success" formatted="true">We sent the confirmation email to %1$s</string>
    <string name="splash_toast_confirmation_email_sent_failed" formatted="true">We could not send the confirmation email to %1$s</string>
    <string name="splash_err_email_empty">Email cannot be empty!</string>
    <string name="splash_err_email_invalid">Not a valid email address!</string>
    <string name="main_title_set_task">Set task</string>
    <string name="main_title_replace_task">Replace task</string>
    <string name="main_text_set_task" formatted="true"><![CDATA[Pick the number of pomodoros you would like to complete while working on <b>%1$s</b>:]]></string>
    <string name="main_text_replace_task" formatted="true"><![CDATA[Cancel current task and replace it with <b>%1$s</b>?<br><br>Pick the number of pomodoros you would like to complete while working on <b>%1$s</b>:]]></string>
    <string name="bottom_sheet_title_cancel_session">Cancel Session</string>
    <string name="bottom_sheet_title_complete_task">Complete Task</string>
    <string name="bottom_sheet_title_pomodoro_count">Pomodoro %1$s/%2$s</string>
    <string name="bottom_sheet_title_change_pomodoro_count">Change Pomodoro Count</string>
    <string name="bottom_sheet_title_change_count">Change Count</string>
    <string name="bottom_sheet_text_cancel_session" formatted="true">Are you sure you want to cancel this session?</string>
    <string name="bottom_sheet_text_complete_task" formatted="true">Are you sure you want to complete this task?</string>
    <string name="bottom_sheet_text_status_idle">Ready</string>
    <string name="bottom_sheet_text_status_paused">Paused</string>
    <string name="bottom_sheet_text_status_active">Working</string>
    <string name="bottom_sheet_text_status_resting">Resting</string>
    <string name="bottom_sheet_text_daily_target">Set number of pomodoros you aim to complete daily</string>
    <string name="bottom_sheet_text_change_pomodoro_count"><![CDATA[Pick the number of pomodoros you would like to complete while working on <b>%1$s</b>:]]></string>
    <string name="bottom_sheet_toast_pomodoro_completed_success">Pomodoro completed</string>
    <string name="bottom_sheet_toast_pomodoro_completed_failed">Could not save progress. Check your connection and try again</string>
    <string name="bottom_sheet_toast_task_completed_success">Task completed</string>
    <string name="bottom_sheet_toast_task_completed_failed">Could not complete this task. Check your connection and try again</string>
    <string name="bottom_sheet_toast_pomodoro_count_change_success">Pomodoro count changed to %1$s</string>
    <string name="bottom_sheet_toast_pomodoro_count_change_failed">Could not change pomodoro count. Pomodoro count value must be more than the number of already completed pomodoros.</string>
    <string name="projects_title_tasks">Tasks</string>
    <string name="projects_title_projects">Projects</string>
    <string name="projects_title_report">Report</string>
    <string name="projects_title_options">Options</string>
    <string name="projects_title_about">About</string>
    <string name="projects_title_archive">Archive</string>
    <string name="projects_title_send_feedback">Send Feedback</string>
    <string name="projects_title_send_premium">Premium</string>
    <string name="projects_title_sign_out">Sign Out</string>
    <string name="projects_title_add_project">Add Project</string>
    <string name="projects_text_today">Today</string>
    <string name="projects_text_this_week">This week</string>
    <string name="projects_text_overdue">Overdue</string>
    <string name="projects_text_sign_out">Are you sure you want to sign out from this account and return to the sign in screen?</string>
    <string name="projects_hint_search_projects">Search Projects</string>
    <string name="projects_toast_project_delete_success">Project deleted</string>
    <string name="projects_toast_project_delete_failed">Failed to delete project. Please try again later.</string>
    <string name="add_project_title_add_project">Add Project</string>
    <string name="add_project_title_update_project">Update Project</string>
    <string name="add_project_title_layout_board">Board Layout</string>
    <string name="add_project_title_layout_list">List Layout</string>
    <string name="add_project_title_layout_calendar">Calendar Layout</string>
    <string name="add_project_text_name">Name</string>
    <string name="add_project_text_color_tag">Color Tag</string>
    <string name="add_project_text_due">Due</string>
    <string name="add_project_text_layout">Layout</string>
    <string name="add_project_hint_name">Enter a name for your project</string>
    <string name="add_project_toast_add_success">Project Added</string>
    <string name="add_project_toast_add_failed">Could not add project. Please try again later.</string>
    <string name="add_project_toast_update_success">Project Updated</string>
    <string name="add_project_toast_update_failed">Could not update project. Please try again later.</string>
    <string name="add_project_toast_add_failed_duplicate">Project with this name already exists!</string>
    <string name="add_project_toast_add_failed_connection">Failed to add project. Please check your internet connection.</string>
    <string name="add_project_toast_update_failed_connection">Failed to update project. Please check your internet connection.</string>
    <string name="add_project_err_name_empty">Project name cannot be empty!</string>
    <string name="add_project_err_name_invalid">Project name cannot contain symbols . $ [ ] # /</string>
    <string name="add_task_title_add_task">Add Task</string>
    <string name="add_task_title_update_task">Update Task</string>
    <string name="add_task_title_allocate_pomodoros">Allocate Pomodoros</string>
    <string name="add_task_title_allocate">Allocate</string>
    <string name="add_task_text_name">Name</string>
    <string name="add_task_text_due">Due</string>
    <string name="add_task_text_pomodoros_allocated">Allocated time</string>
    <string name="add_task_text_recurrence">Repeat</string>
    <string name="add_task_hint_name">Enter a name for your task</string>
    <string name="add_task_toast_add_success">Task Added</string>
    <string name="add_task_toast_add_failed">Could not add task. Please try again later.</string>
    <string name="add_task_toast_update_success">Task Updated</string>
    <string name="add_task_toast_update_failed">Could not updated task. Please try again later.</string>
    <string name="view_project_title_options">Options</string>
    <string name="view_project_title_edit_project">Edit Project</string>
    <string name="view_project_title_delete_project">Delete Project</string>
</resources>