<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/navigation_tasks"
        android:enabled="true"
        android:icon="@drawable/ic_task_black"
        android:title="@string/projects_title_tasks"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_projects"
        android:enabled="true"
        android:icon="@drawable/ic_project_black"
        android:title="@string/projects_title_projects"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_report"
        android:enabled="true"
        android:icon="@drawable/ic_report_black"
        android:title="@string/projects_title_report"
        app:showAsAction="always|withText" />
</menu>