<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_content"
        android:text="@string/projects_title_options" />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle.Borderless"
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_about_black"
        android:drawablePadding="@dimen/margin_content"
        android:gravity="start"
        android:text="@string/projects_title_about" />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle.Borderless"
        android:id="@+id/button_archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_archive_black"
        android:drawablePadding="@dimen/margin_content"
        android:gravity="start"
        android:text="@string/projects_title_archive" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle.Borderless"
        android:id="@+id/button_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_send_black"
        android:drawablePadding="@dimen/margin_content"
        android:gravity="start"
        android:text="@string/projects_title_send_feedback" />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle.Borderless"
        android:id="@+id/button_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sign_out_black"
        android:drawablePadding="@dimen/margin_content"
        android:gravity="start"
        android:text="@string/projects_title_sign_out" />
</androidx.appcompat.widget.LinearLayoutCompat>