<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_content"
        android:text="@string/view_project_title_options" />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle.Borderless"
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:drawableEnd="@drawable/ic_edit_black"
        android:drawablePadding="@dimen/margin_content"
        android:text="@string/view_project_title_edit_project"/>
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle.Borderless"
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:drawableEnd="@drawable/ic_delete_black"
        android:drawablePadding="@dimen/margin_content"
        android:text="@string/view_project_title_delete_project"/>
</androidx.appcompat.widget.LinearLayoutCompat>