<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_title"
        style="@style/TextStyle.AppBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content"
        android:layout_marginTop="@dimen/margin_content"
        android:text="@string/add_task_title_allocate_pomodoros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectionDividerHeight="@dimen/size_divider"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title"
        tools:targetApi="q" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_negative"
        style="@style/ButtonStyle.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:text="@string/core_cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_positive"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_picker" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_positive"
        style="@style/ButtonStyle.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:text="@string/add_task_title_allocate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_negative"
        app:layout_constraintTop_toBottomOf="@+id/number_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>